--- a/app/templates/account/unconfirmed.html
+++ b/app/templates/account/unconfirmed.html
@@ -16,7 +16,7 @@ Algotrader | Unconfirmed
         <div class="ui divider"></div>
 
         <h3>I didn't receive an email!</h3>
-        <p>Please sheck your Spam inbox, sometimes the letter gets there...</p>
+        <p style="color: red;">Please check your Spam inbox, sometimes the letter gets there...</p>
         <p>No problem! Just click the button below and we'll send you another one.</p>
         <a class="ui small button" href="{{ url_for('account.confirm_request') }}">Resend confirmation email</a>
     </div>
