--- a/app/templates/account/join_invite.html
+++ b/app/templates/account/join_invite.html
@@ -1,15 +1,26 @@
-{% extends 'layouts/base.html' %}
+{% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader|Join Invite
+Algotrader | Join Invite
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 {% import 'macros/check_password.html' as check %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
+{% endblock %}
+
+{% block header %}
+{% include 'mainpage/header.html' %}
+{% endblock %}
+
 {% block content %}
-<div class="ui grid container">
-    <div class="eight wide computer sixteen wide mobile centered column">
-        <h2 class="ui dividing header">Create your password</h2>
-        {{ f.render_form(form) }}
+<div class="container">
+    <div class="login-container">
+        <div class="login-grid">
+            <h2 class="">Create your password</h2>
+            {{ f.render_form(form) }}
+        </div>
     </div>
 </div>
 {{ check.password_check('password', 0) }}
