--- a/app/templates/account/reset_password.html
+++ b/app/templates/account/reset_password.html
@@ -1,14 +1,25 @@
-{% extends 'layouts/main.html' %}
+{% extends 'mainpage/layout.html' %}
 {% block page_title %}
-Algotrader|Reset password
+Algotrader | Reset Password
 {% endblock %}
 {% import 'macros/form_macros.html' as f %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
+{% endblock %}
+
+{% block header %}
+{% include 'mainpage/header.html' %}
+{% endblock %}
+
 {% block content %}
-<div class="ui grid container login-container">
-    <div class="eight wide computer sixteen wide mobile centered column">
-        <h2 class="ui dividing header">Reset your password</h2>
-        {{ f.render_form(form) }}
+<div class="container">
+    <div class="login-container">
+        <div class="login-grid">
+            <h2 class="">Reset your password</h2>
+            {{ f.render_form(form) }}
+        </div>
     </div>
 </div>
 {% endblock %}
