naming on page changed

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -136,7 +136,7 @@
                                 <li class="btn-group nav-item">
                                     <a href="/account/subscriptions" class="nav-link text-end">
                                     <i class="fa fa-dollar-sign pr-1"></i>
-                                    Improve Subscription
+                                    Change plan
                                 </a>
                                 </li>
                                 <li class="btn-group nav-item">
