--- a/app/templates/account/login_new.html
+++ b/app/templates/account/login_new.html
@@ -16,6 +16,22 @@ Algotrader | LogIn
 
 {% block content %}
 <div class="container">
+    {% macro render_flashes(class) %}
+            {% with msgs = get_flashed_messages(category_filter=[class]) %}
+            {% for msg in msgs %}
+            <div class="ui {{ class }} message" data-autohide="5">
+                <i class="close icon"></i>
+                {{ msg }}
+            </div>
+            {% endfor %}
+            {% endwith %}
+            {% endmacro %}
+    <div class="flashes">
+        {{ render_flashes('error') }}
+        {{ render_flashes('warning') }}
+        {{ render_flashes('info') }}
+        {{ render_flashes('success') }}
+    </div>
     <div class="login-container">
         <div class="login-grid">
             <h2 class="">Log in</h2>
