--- a/app/templates/admin/client_commands.html
+++ b/app/templates/admin/client_commands.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Client commands
+Algotrader | Client commands
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
