--- a/app/templates/admin/pending_approval.html
+++ b/app/templates/admin/pending_approval.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Pending approval
+Algotrader | Pending approval
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
