--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Stock info
+Algotrader | Stock info
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
