--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% import 'macros/form_macros.html' as f %}
 {% block page_title %}
-User Settings
+Algotrader | Settings
 {% endblock %}
 {% macro user_info(user) %}
 <table class="ui compact definition table">
