--- a/app/templates/userview/download.html
+++ b/app/templates/userview/download.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/base.html' %}
-
+{% block page_title %}
+Algotrader | Package
+{% endblock %}
 {% block content %}
 <div class="app-main__inner" xmlns="http://www.w3.org/1999/html">
     <div class="app-page-title">
