--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Trader station
+Algotrader | Trader station
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
