--- a/app/templates/account/subscriptions.html
+++ b/app/templates/account/subscriptions.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/main.html' %}
 {% block page_title %}
-Algotrader | Subcriptions
+Algotrader | Subscriptions
 {% endblock %}
 
 {% block content %}
