--- a/app/templates/admin/admin_index.html
+++ b/app/templates/admin/admin_index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Administration
+Algotrader | Administration
 {% endblock %}
 {% macro dashboard_option(title, endpoint, description=None, icon=None) %}
 <a class="column" href="{{ url_for(endpoint) }}">
