--- a/app/templates/admin/market_data.html
+++ b/app/templates/admin/market_data.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Market data
+Algotrader | Market data
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
