--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Users monitor
+Algotrader | Monitor
 {% endblock %}
 {% block content %}
 <div class="ui stackable grid container">
