--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Algotrader|today
+Algotrader | Today
 {% endblock %}
 {% block content %}
 
