--- a/app/templates/userview/closed_position_info.html
+++ b/app/templates/userview/closed_position_info.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Position
+Algotrader | Position closed
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
