--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block page_title %}
-Performance
+Algotrader | Performance
 {% endblock %}
 {% block content %}
 <div class="app-main__inner">
