--- a/app/templates/candidates/usercandidates.html
+++ b/app/templates/candidates/usercandidates.html
@@ -79,7 +79,7 @@
                 <tr>
                     <td><img src="{{ m.logo }}" width="20" height="20"></td>
                     <td>
-                        <a href="{{url_for('candidates.info')}}?ticker_to_show={{ m.ticker }}">
+                        <a href="/candidates/info/{{ m.ticker }}">
                             {{ m.ticker }}
                         </a>
                     </td>
@@ -149,7 +149,7 @@
                 <tr>
                     <td><img src="{{ m.logo }}" width="20" height="20"></td>
                     <td>
-                        <a href="{{url_for('candidates.info')}}?ticker_to_show={{ m.ticker }}">
+                        <a href="/candidates/info/{{ m.ticker }}">
                             {{ m.ticker }}
                         </a>
                     </td>
