ticker-info: score

--- a/app/static/styles/ticker_info.css
+++ b/app/static/styles/ticker_info.css
@@ -3,3 +3,34 @@
     color: rgba(0,0,0,.87);
     text-decoration: none;
 }
+
+.left-part{
+    display: flex;
+    width: 30%;
+    justify-content: space-between;
+}
+
+.ticker-score{
+    width: 87px;
+    min-height: 87px;
+}
+
+.bage-score{
+    height: 87px;
+    text-align: center;
+    padding-top: 24%;
+    font-size: x-large;
+    color: #fff;
+    border-radius: 2rem;
+}
+
+.score-title{
+    margin-top: 12%;
+    font-size: medium;
+}
+
+@media only screen and (max-width: 767px){
+    .left-part{
+        width: 100%;
+    }
+}
