--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -41,7 +41,7 @@ Algotrader | Stock Info
             </div>
             <div class="page-title-actions">
                 <div>
-                    <div class="ticker-data mt-2 mr-2 badge {% if market_data.beta is not none and user_settings.algo_min_beta is not none and market_data.beta >= user_settings.algo_min_beta %}
+                    <div title="Volatility of a stock in relation to the overall market. 12M" class="ticker-data mt-2 mr-2 badge {% if market_data.beta is not none and user_settings.algo_min_beta is not none and market_data.beta >= user_settings.algo_min_beta %}
                     btn-success
                     {% else %}
                     btn-warning
@@ -50,7 +50,7 @@ Algotrader | Stock Info
                     </div>
                 </div>
                 <div>
-                    <div class="ticker-data mt-2 mr-2 badge {% if market_data.under_priced_pnt is not none and user_settings.algo_min_underprice is not none and market_data.under_priced_pnt >= user_settings.algo_min_underprice %}
+                    <div title="Lower than cheapest analyst prediction" class="ticker-data mt-2 mr-2 badge {% if market_data.under_priced_pnt is not none and user_settings.algo_min_underprice is not none and market_data.under_priced_pnt >= user_settings.algo_min_underprice %}
                     btn-success
                     {% else %}
                     btn-warning
@@ -59,28 +59,41 @@ Algotrader | Stock Info
                     </div>
                 </div>
                 <div>
-                    <div class="ticker-data mt-2 mr-2 badge btn-success">Buying trigger
+                    <div title="Todays good entry point. Based on 1 last year intraday volatility" class="ticker-data mt-2 mr-2 badge btn-success">Buying trigger
                         <span class="badge badge-pill badge-light">{{market_data.buying_target_price_fmp | round(1)}}</span>
                     </div>
                 </div>
             </div>
-            <div class="page-title-actions">
-                <div>
-                    <div class="mb-2 mr-2 badge badge-info"><a target="_blank"
-                                                               href="https://finance.yahoo.com/quote/{{candidate.ticker}}">Go
-                        to Yahoo</a></div>
-                </div>
 
-                <div>
-                    <div class="mb-2 mr-2 badge badge-info"><a target="_blank"
-                                                               href="https://www.tipranks.com/stocks/{{candidate.ticker}}/forecast">Go
-                        Tiprank</a></div>
-                </div>
-                <div>
-                    <div class="mb-2 mr-2 badge badge-info"><a target="_blank"
-                                                               href="https://stockinvest.us/stock/{{candidate.ticker}}">Go
-                        to Stock Invest</a></div>
-                </div>
+            <div class="page-title-actions">
+                <table class="mb-0 table table-borderless">
+                    <tbody>
+                        <tr>
+                            <th scope="row">Exchange:</th>
+                            <td>{{candidate.exchange}}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Sector:</th>
+                            <td>{{candidate.sector}}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Industry:</th>
+                            <td>{{candidate.industry}}</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Personal List:</th>
+                            <td class="text-center">
+                                {% if not in_list %}
+                                <button type="button" class="btn btn-outline-info add-candidate">Add</button>
+                                {% else %}
+                                <button type="button" class="btn btn-outline-success candidate-in-list disabled">
+                                    <i class="metismenu-icon fa fa-check"></i>
+                                </button>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -88,8 +101,8 @@ Algotrader | Stock Info
         <div class="row">
             <div id="container" style="width:100%; height:400px;"></div>
             <div>
-                <input type="hidden" id="ticker" value="{{ candidate.ticker }}">
-
+                <script> var ticker = '{{ candidate.ticker }}'; </script>
+                <script> var user_email = '{{ current_user.email }}'; </script>
                 <script> var hist_dates = {{ hist_dates|tojson }}; </script>
                 <script> var hist_algo_ranks = {{ hist_algo_ranks|tojson }}; </script>
 
@@ -167,5 +180,6 @@ Algotrader | Stock Info
         integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg=="
         crossorigin="anonymous"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/snp_graph.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/spyder_project.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/ticker_info.js') }}"></script>
 {% endblock %}
