--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -132,15 +132,10 @@ Algotrader | Stock Info
         <div class="row">
             <div id="container" style="width:100%; height:400px;"></div>
             <div>
+                <script> var hist_data = '{{ hist_data|tojson }}'; </script>
                 <script> var ticker = '{{ candidate.ticker }}'; </script>
                 <script> var user_email = '{{ current_user.email }}'; </script>
-                <script> var hist_dates = {{ hist_dates|tojson }}; </script>
-                <script> var hist_algo_ranks = {{ hist_algo_ranks|tojson }}; </script>
-
             </div>
-        </div>
-        <div class="row">
-            <canvas id="myChart" style="width:100%; height:400px;"></canvas>
         </div>
         <div class="divider mt-0" style="margin-bottom: 30px;"></div>
         <div class="row">
