--- a/app/static/styles/ticker_info.css
+++ b/app/static/styles/ticker_info.css
@@ -4,24 +4,70 @@
     text-decoration: none;
 }
 
-.left-part{
-    display: flex;
-    width: 30%;
-    justify-content: space-between;
+.page-logo,
+.page-fmp-data,
+.page-market-data,
+.page-ticket-info{
+    width: 25%;
 }
 
-.ticker-score{
-    width: 87px;
-    min-height: 87px;
+.page-fmp-data{
+    margin-left: -3%;
+}
+
+.page-fmp-data .div-content{
+    top: 4%;
+    width: 12%;
+}
+
+.page-fmp-data .div-content span{
+    float: right;
+    font-size: smaller;
+}
+
+.fmp-price-content{
+    font-size: larger;
+    font-weight: 900;
+    border-bottom: 1px solid;
+}
+
+.spinner-border{
+    margin-right: 55%;
+}
+
+.page-market-data{
+    display: flex;
+    margin-left: -2%;
 }
 
 .bage-score{
-    height: 87px;
+    height: 101px;
+    width: 150px;
     text-align: center;
-    padding-top: 24%;
+    padding-top: 7%;
     font-size: x-large;
     color: #fff;
     border-radius: 2rem;
+    margin-top: 1%;
+    margin-right: 6%;
+}
+
+.ticket-info-row{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 1%;
+}
+
+.ticket-info-val{
+    width: 60%;
+}
+
+.ticket-info-title{
+    font-weight: 600;
+}
+
+.page-ticket-info{
+    margin-left: 5%;
 }
 
 .score-title{
@@ -42,142 +88,71 @@
     cursor: help;
 }
 
-.page-title-actions .table th, .page-title-actions .table td,
-.fmp-data th, .fmp-data td{
-    padding: 0.25rem;
-}
-
 .add-candidate,
 .candidate-in-list{
-    width:65%;
+    width:60%;
 }
 
-.fmp-data thead{
-    border-bottom: 1px solid;
-    border-color: #a29797;
-    font-size: larger;
+.ticker-action .div-content{
+    position: inherit;
 }
 
-.fmp-data-content .div-content {
-    top: -7%;
-    width: 15%;
+.ticker-action  .div-loading .spinner-border {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
-@media only screen and (max-width: 767px){
-    .left-part{
+@media only screen and (max-width: 991.80px){
+    .app-page-title .page-title-heading, .app-page-title .page-title-wrapper {
+        margin: 0 auto;
+        display: flex;
+    }
+
+    .page-logo, .page-fmp-data, .page-market-data, .page-ticket-info {
+        width: 35%;
+    }
+    .page-fmp-data{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .page-logo, .page-market-data{
+        width: 40%;
+    }
+    .page-ticket-info {
         width: 100%;
+        margin-top: 42%;
+        margin-left: -79%;
+    }
+    .page-market-data {
+        margin-left: 8%;
+    }
+    .ticker-exchsnge, .ticker-sector, .ticker-industry{
+        display: none;
     }
 }
 
-@media only screen and (max-width: 1280px){
-    .app-page-title .page-title-actions {
-        margin-left: 6%;
+@media only screen and (max-width: 600px){
+    .page-logo .badge-warning{
+        font-size: xx-small;
     }
-}
-
-@media only screen and (max-width: 1100px){
-    .page-title-wrapper{
-        display: block !important;
-    }
-    .left-part {
-        width: 31% !important;
-    }
-    .fmp-data-content{
-        margin-top: -11% !important;
-        margin-left: 33% !important;
-    }
-    .fmp-data-content .div-content {
-        top: -3% !important;
-        width: 18% !important;
-    }
-    .fmp-data, .ticker-data-info table{
-        font-size: xx-small !important;
-    }
-    .div-loading{
-        height: 0px !important;
-        margin-top: 14% !important;
-        margin-left: 9% !important;
-    }
-
     .market-data-actions{
-        margin-left: 54% !important;
-        width: 20% !important;
-        margin-top: 1% !important;
+        display: none;
+    }
+    .page-market-data {
+        margin-left: 22%;
+    }
+    .bage-score {
+        height: 87px;
+        width: 87px;
+        padding-top: 13%;
+        margin-top: -11%;
+        margin-right: 0;
     }
 
-    .ticker-data {
-        width: 150px !important;
-        text-align: inherit !important;
-        font-size: xx-small !important;
+    .ticker-action{
+        margin-top: 20%;
     }
 
-    .ticker-data-info{
-        margin-left: 74% !important;
-        margin-top: -99px !important;
-    }
-}
-
-@media only screen and (max-width: 991.98px){
-    .app-page-title .page-title-actions.market-data-actions{
-        margin-top: -14% !important;
-    }
-}
-
-@media only screen and (max-width: 870px){
-    .app-page-title .page-title-actions.market-data-actions{
-        margin-top: 14% !important;
-        margin-left: 0px !important;
-        margin-right: 31px;
-    }
-
-    .left-part {
-        width: 55% !important;
-    }
-
-    .fmp-data-content {
-        margin-left: 75% !important;
-    }
-    .left-part .page-title-heading{
-        display: flex !important;
-    }
-
-    .ticker-data-info {
-        margin-left: 23% !important;
-        margin-top: -99px !important;
-        margin-right: 24% !important;
-    }
-}
-
-@media only screen and (max-width: 650px){
-    .fmp-data-content {
-        margin-left: 0% !important;
-        margin-top: -8% !important;
-    }
-
-    .fmp-data-content .div-content {
-        top: 27% !important;
-        width: 84% !important;
-    }
-
-    .app-page-title .page-title-actions.market-data-actions {
-        margin-top: 72% !important;
-        margin-left: 0px !important;
-        margin-right: 8px;
-    }
-
-    .ticker-data {
-        width: 128px !important;
-        text-align: inherit !important;
-        font-size: xx-small !important;
-    }
-
-    .ticker-data-info {
-        margin-left: 45% !important;
-        margin-top: -99px !important;
-        margin-right: -7% !important;
-    }
-
-    .left-part {
-        width: 96% !important;
-    }
 }
