--- a/app/templates/candidates/ticker_info.html
+++ b/app/templates/candidates/ticker_info.html
@@ -11,120 +11,96 @@ Algotrader | Stock Info
 <div class="app-main__inner">
     <div class="app-page-title">
         <div class="page-title-wrapper">
-            <div class="left-part">
-                <div>
-                    <a class="ticker-web" target="_blank" href="{{candidate.website}}">
-                        <div class="page-title-heading">
-                            <div>
-                                <img src="{{candidate.logo}}" style="height:60px;padding-right: 10px;">
-                            </div>
-                            <div>
-                                {{candidate.ticker}}
-                                <div class="page-title-subheading">
-                                    {{candidate.company_name}}
-                                </div>
-                            </div>
+            <div class="page-logo">
+                <a class="ticker-web" target="_blank" href="{{candidate.website}}">
+                    <div class="page-title-heading">
+                        <div>
+                            <img src="{{candidate.logo}}" style="height:60px;padding-right: 10px;">
                         </div>
-                    </a>
-                    <div>
-                        <div class="mt-2 mr-2 badge {{bg_upd_color}} badge-pill">Last Update(UTC) :
-                            {{last_update}}
+                        <div>
+                            {{candidate.ticker}}
+                            <div class="page-title-subheading">
+                                {{candidate.company_name}}
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="ticker-score">
-                    <div class="bage-score {{score_bg}}">
-                        <span class="badge badge-pill badge-light">{{market_data.algotrader_rank}}</span>
-                        <div class="score-title">Score</div>
+                    </a>
+                <div>
+                    <div class="mt-2 mr-2 badge {{bg_upd_color}} badge-pill">Last Update(UTC) :
+                        {{last_update}}
                     </div>
                 </div>
             </div>
-            <div class="page-title-actions fmp-data-content" style="width: 15%;">
+            <div class="page-fmp-data">
                 <div class="div-content">
-                    <table class="mb-0 table table-borderless fmp-data">
-                        <thead>
-                            <tr>
-                                <th>Price:</th>
-                                <th class="float-right fmp-price text-primary"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Change:</th>
-                                <td class="float-right fmp-change"></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Last Close:</th>
-                                <td class="float-right fmp-last-close"></td>
-                            </tr>
-                            <tr class="help-cursor" title="A high P/E ratio could mean that a company's stock is overvalued, or else that investors are expecting high growth rates in the future">
-                                <th scope="row">P/E:</th>
-                                <td class="float-right fmp-pe font-weight-bold"></td>
-                            </tr>
-                            <tr class="help-cursor" title="A higher EPS indicates greater value">
-                                <th scope="row">EPS:</th>
-                                <td class="float-right fmp-eps"></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="fmp-price-content">
+                        Price: <span class="fmp-price text-primary"></span>
+                    </div>
+                    <div class="fmp-change-content">
+                        Change: <span class="fmp-change"></span>
+                    </div>
+                    <div class="fmp-close-content">
+                        Last Close: <span class="fmp-last-close"></span>
+                    </div>
+                    <div class="fmp-pne-eps">
+                        <div class="help-cursor" title="A high P/E ratio could mean that a company's stock is overvalued, or else that investors are expecting high growth rates in the future">
+                            P/E: <span class="fmp-pe font-weight-bold"></span>
+                        </div>
+                        <div class="help-cursor" title="A higher EPS indicates greater value">
+                            EPS: <span class="fmp-eps"></span>
+                        </div>
+                    </div>
                 </div>
                 {% include 'layouts/loader.html' %}
             </div>
-            <div class="page-title-actions market-data-actions">
-                <div>
+            <div class="page-market-data">
+                <div class="bage-score {{score_bg}}">
+                    <span class="badge badge-pill badge-light">{{market_data.algotrader_rank}}</span>
+                    <div class="score-title">Score</div>
+                </div>
+                <div class="market-data-actions">
                     <div title="Volatility of a stock in relation to the overall market. 12M" class="help-cursor ticker-data mt-2 mr-2 badge {% if market_data.beta is not none and user_settings.algo_min_beta is not none and market_data.beta >= user_settings.algo_min_beta %}
-                    btn-success
-                    {% else %}
-                    btn-warning
-                    {% endif %}">Beta
-                        <span class="badge badge-pill badge-light">{{market_data.beta | round(1)}}</span>
+                        btn-success
+                        {% else %}
+                        btn-warning
+                        {% endif %}">
+                        Beta <span class="badge badge-pill badge-light">{{market_data.beta | round(1)}}</span>
                     </div>
-                </div>
-                <div>
                     <div title="Lower than cheapest analyst prediction" class="help-cursor ticker-data mt-2 mr-2 badge {% if market_data.under_priced_pnt is not none and user_settings.algo_min_underprice is not none and market_data.under_priced_pnt >= user_settings.algo_min_underprice %}
-                    btn-success
-                    {% else %}
-                    btn-warning
-                    {% endif %}">Underpriced
-                        <span class="badge badge-pill badge-light">{{market_data.under_priced_pnt}}</span>
+                        btn-success
+                        {% else %}
+                        btn-warning
+                        {% endif %}">
+                        Underpriced <span class="badge badge-pill badge-light">{{market_data.under_priced_pnt}}</span>
                     </div>
-                </div>
-                <div>
-                    <div title="Todays good entry point. Based on 1 last year intraday volatility" class="help-cursor ticker-data mt-2 mr-2 badge btn-success">Buying trigger
-                        <span class="badge badge-pill badge-light">{{market_data.buying_target_price_fmp | round(1)}}</span>
+                    <div title="Todays good entry point. Based on 1 last year intraday volatility" class="help-cursor ticker-data mt-2 mr-2 badge btn-success">
+                        Buying trigger <span class="badge badge-pill badge-light">{{market_data.buying_target_price_fmp | round(1)}}</span>
                     </div>
                 </div>
             </div>
-
-            <div class="page-title-actions ticker-data-info">
-                <table class="mb-0 table table-borderless">
-                    <tbody>
-                        <tr>
-                            <th scope="row">Exchange:</th>
-                            <td>{{candidate.exchange}}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Sector:</th>
-                            <td class="ticker-sector-val" data-sector="{{candidate.sector}}">{{candidate.sector}}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Industry:</th>
-                            <td>{{candidate.industry}}</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Personal List:</th>
-                            <td class="text-center">
-                                {% if not in_list %}
-                                <button type="button" class="btn btn-outline-info add-candidate">Add</button>
-                                {% else %}
-                                <button type="button" class="btn btn-outline-success candidate-in-list disabled">
-                                    <i class="metismenu-icon fa fa-check"></i>
-                                </button>
-                                {% endif %}
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="page-ticket-info">
+                <div class="ticker-exchsnge ticket-info-row">
+                    <div class="ticket-info-title">Exchange:</div> <div class="ticker-sector-val ticket-info-val" data-sector="{{candidate.sector}}">{{candidate.sector}}</div>
+                </div>
+                <div class="ticker-sector ticket-info-row">
+                    <div class="ticket-info-title">Sector:</div> <div class="ticker-sector-val ticket-info-val" data-sector="{{candidate.sector}}">{{candidate.sector}}</div>
+                </div>
+                <div class="ticker-industry ticket-info-row">
+                    <div class="ticket-info-title">Industry:</div> <div class="ticket-info-val">{{candidate.industry}}</div>
+                </div>
+                <div class="ticker-action ticket-info-row">
+                    <div class="ticket-info-title">Personal List:</div>
+                    <div class="ticket-info-val div-content">
+                        {% if not in_list %}
+                        <button type="button" class="btn btn-outline-info add-candidate">Add</button>
+                        {% else %}
+                        <button type="button" class="btn btn-outline-success candidate-in-list">
+                            <i class="metismenu-icon fa fa-check"></i>
+                        </button>
+                        {% endif %}
+                    </div>
+                    {% include 'layouts/loader.html' %}
+                </div>
             </div>
         </div>
     </div>
